@@ -1481,6 +1481,9 @@ class Parser {
 		wfProfileIn( __METHOD__ );
 
 		$bits = preg_split( $this->mExtLinkBracketedRegex, $text, -1, PREG_SPLIT_DELIM_CAPTURE );
+		if ( $bits === false ) {
+			throw new MWException( "PCRE needs to be compiled with --enable-unicode-properties in order for MediaWiki to function" );
+		}
 		$s = array_shift( $bits );
 
 		$i = 0;
